--- a/app/src/main/res/layout/activity_tasks.xml
+++ b/app/src/main/res/layout/activity_tasks.xml
@@ -7,7 +7,7 @@
     tools:context=".TasksActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tvTaskHeader"
         style="@style/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -25,24 +25,30 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView">
-
+        app:layout_constraintTop_toBottomOf="@+id/tvTaskHeader">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <LinearLayout
+                android:id="@+id/llTaskMultiply"
                 android:layout_marginHorizontal="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:gravity="center_vertical"
                 style="@style/item">
-
+                <ImageView
+                    android:layout_marginEnd="15dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginVertical="20dp"
+                    android:layout_width="43dp"
+                    android:layout_height="43dp"
+                    android:src="@drawable/multiply"/>
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
                     <TextView
-                        android:layout_marginStart="15dp"
                         android:layout_marginTop="15dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -51,7 +57,6 @@
                         android:textSize="16sp"
                         android:text="@string/multiply"/>
                     <TextView
-                        android:layout_marginStart="15dp"
                         android:layout_marginBottom="15dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
