--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,6 +9,7 @@
         <item name="colorSecondary">@color/blue_200</item>
         <item name="colorSecondaryVariant">@color/blue_700</item>
         <item name="colorOnSecondary">@color/black</item>
+        <item name="android:windowLightStatusBar">true</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
@@ -21,7 +22,14 @@
         <item name="android:textColor">@color/grey_500</item>
         <item name="android:fontFamily">@font/ibm_plex_sans_medium</item>
     </style>
+    <style name="textBlue" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:textColor">@color/blue_500</item>
+        <item name="android:fontFamily">@font/ibm_plex_sans_medium</item>
+    </style>
     <style name="item" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:background">@drawable/item_day</item>
+    </style>
+    <style name="popup" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:background">@drawable/popup_day</item>
     </style>
 </resources>
