--- a/app/src/main/res/drawable/gradient_progress_error.xml
+++ b/app/src/main/res/drawable/gradient_progress_error.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient android:startColor="#8AD367C1" android:endColor="#8FFF4A4A"
-        android:angle="-45"/>
+    <gradient android:startColor="#FD4A4A" android:endColor="#FF557D" />
 </shape>
