--- a/app/src/main/res/drawable/item_multiply.xml
+++ b/app/src/main/res/drawable/item_multiply.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient android:startColor="#8FFF4A4A" android:endColor="#8AD367C1"
+    <corners android:topLeftRadius="15dp" android:bottomLeftRadius="15dp"/>
+    <gradient android:startColor="#7A7BDAC3" android:endColor="#85C2F6A2"
         android:angle="-45"/>
 </shape>
