--- a/app/src/main/res/drawable/message_day_2.xml
+++ b/app/src/main/res/drawable/message_day_2.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient android:startColor="#8FFF4A4A" android:endColor="#8AD367C1"
-        android:angle="-45"/>
+
+    <solid android:color="@color/grey_50"/>
+    <corners android:radius="25dp"/>
+
 </shape>
