--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,9 +24,9 @@
     <color name="grey_300">#888888</color>
     <color name="grey_500">#676767</color>
     <color name="grey_650">#434343</color>
-    <color name="grey_700">#1C1C1C</color>
+    <color name="grey_700">#232323</color>
     <color name="grey_800">#191919</color>
-    <color name="black10">#99000000</color>
+    <color name="black10">#BC000000</color>
     <color name="black_50">#171717</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFFFF</color>
